refactor: waiting 패키지 기타 리팩터링